--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,21 @@ services:
       dockerfile: ContactWebApi/Dockerfile
     networks:
       - backend
-    ports:
-      - "5002:8080"
     environment:
       - DB_HOST=contactdb
       - DB_NAME=contact
       - DB_ROOT_PASSWORD=12345
+  
+  apigateway:
+    container_name: api-gateway
+    image: apigateway
+    build:
+      context: .
+      dockerfile: ApiGateway/Dockerfile
+    ports:
+      - "8001:8080"
+    networks:
+      - backend
 
 networks:
   backend:
