--- a/NotificationWebApi/NotificationWebApi.csproj
+++ b/NotificationWebApi/NotificationWebApi.csproj
@@ -14,16 +14,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
       <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
-      <PackageReference Include="Ocelot" Version="23.3.3" />
-      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
