--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,4 @@ secrets.json
 Thumbs.db
 
 #ignore file ultimate-balm-439008-h4-5ac62cc83f52.json
-PostWebApi\Services\ultimate-balm-439008-h4-5ac62cc83f52.json
+PostWebApi/Services/ultimate-balm-439008-h4-5ac62cc83f52.json
